--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{# {% block album %}{% endblock %} #}
+{% block album %}{% endblock %}
 
 {% block content %}
 <h1 class="text-center">Bienvenue</h1>
