--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -98,7 +98,7 @@
                                 <div class="col">
                                     <div class="btn-group text-center m-2 text-uppercase ">
                                         <a href="{{ path('app_trick_show', {'slug': trick.slug }) }}"
-                                           class="btn btn-sm btn-outline-warning border border-info border-3 text-white fw-bold">{{ trick.title }}
+                                           class="btn btn-sm btn-outline-warning border border-dark border-3 text-white fw-bold">{{ trick.title }}
                                         </a>
                                     </div>
                                 </div>
